...
 * limitations under the License.
 */
package com.google.jetpackcamera.ui.components.capture

import androidx.compose.ui.semantics.SemanticsPropertyKey
import androidx.compose.ui.semantics.SemanticsPropertyReceiver
const val CAPTURE_BUTTON = "CaptureButton"
internal const val CAPTURE_BUTTON_RING_BORDER = "CaptureButtonRingBorder"
const val CAPTURE_MODE_TOGGLE_BUTTON = "CaptureModeToggleButton"
const val FLIP_CAMERA_BUTTON = "FlipCameraButton"
const val SNACKBAR_NODE_TAG = "SnackbarNodeTag"

const val IMAGE_WELL_TAG = "ImageWellTag"

const val PREVIEW_DISPLAY = "PreviewDisplay"
const val SCREEN_FLASH_OVERLAY = "ScreenFlashOverlay"
const val AUDIO_INPUT_TOGGLE = "AudioInputToggle"
const val FOCUS_METERING_INDICATOR_TAG = "FocusMeteringIndicatorTag"

enum class AudioInputState {
    OFF,
    READY,
    INCOMING
...

const val ELAPSED_TIME_TAG = "ElapsedTimeTag"
const val VIDEO_QUALITY_TAG = "VideoQualityTag"

// quick settings tags
// todo(kc): rename quick_settings_drop_down to something more appropriate?
const val QUICK_SETTINGS_DROP_DOWN = "QuickSettingsDropDown"
const val SETTINGS_BUTTON = "SettingsButton"

const val QUICK_SETTINGS_BOTTOM_SHEET = "QuickSettingsBottomSheet"
const val QUICK_SETTINGS_DRAG_HANDLE = "QuickSettingsDragHandle"
const val QUICK_SETTINGS_SCRIM = "QuickSettingsScrim"

const val QUICK_SETTINGS_RATIO_3_4_BUTTON = "QuickSettingsRatio3:4Button"
const val QUICK_SETTINGS_RATIO_9_16_BUTTON = "QuickSettingsRatio9:16Button"
const val QUICK_SETTINGS_RATIO_1_1_BUTTON = "QuickSettingsRatio1:1Button"

// quick settings capture mode
...
