...
  ~ limitations under the License.
  -->
<resources>
    <!--
    settings page text
    -->
    <string name="settings_title">Settings</string>
    <string name="nav_back_accessibility">Button to navigate back out of settings</string>

    <string name="section_title_camera_settings">Default Camera Settings</string>
    <string name="section_title_recording_settings">Default Recording Settings</string>

    <string name="section_title_app_settings">App Settings</string>
...
