...
//
// PLEASE UPDATE YOUR TESTS ACCORDINGLY!
//
// ////////////////////////////////

const val SETTINGS_TITLE = "SettingsTitle"
const val BACK_BUTTON = "BackButton"
const val CLOSE_BUTTON = "CloseButton"
const val CONTAINER_DIALOG_CONTENTS = "dialog_contents_container"

// unsupported rationale tags
const val DEVICE_UNSUPPORTED_TAG = "DeviceUnsupportedTag"
const val STABILIZATION_UNSUPPORTED_TAG = "StabilizationUnsupportedTag"
...
