...
  ~ limitations under the License.
  -->
<resources>
    <string name="toast_image_capture_success">Image Capture Success</string>
    <string name="toast_video_capture_external_unsupported">Video not supported while app is in image-only capture mode</string>
    <string name="toast_image_capture_external_unsupported">Image capture not supported while app is in video-only capture mode</string>
    <string name="toast_video_capture_success">Video Capture Success</string>
    <string name="toast_video_capture_failure">Video Capture Failure</string>
    <string name="toast_capture_failure">Image Capture Failure</string>
</resources>
